# agent-toolkit

./: .gitignore  CLAUDE.md  CLAUDE.md-example  LICENSE  README.md  statusline.sh
scripts/: settings-statusline.json  statusline.sh
skills/ast-grep/: SKILL.md
skills/bash/: SKILL.md
skills/bash/references/: advanced-patterns.md  script-template.md
skills/design-patterns/references/: cross-language.md
skills/gemini-review/: SKILL.md
skills/gemini-review/references/: workflow.md
skills/golang/: SKILL.md
skills/golang/resources/: .editorconfig  .golangci.yml
skills/golang/scripts/: fmt-check.sh  lint.sh  pre-commit
skills/improve-skill/: SKILL.md
skills/improve-skill/scripts/: analyze_session.py  extract_session.py
skills/make/: SKILL.md
skills/python/: SKILL.md  pyproject.toml
skills/python/references/: advanced-patterns.md  pydantic-patterns.md
skills/python/src/: __init__.py  contracts.py  idioms.py  models.py
skills/python/tests/: __init__.py  test_contracts.py  test_idioms.py  test_models.py
skills/scm/: SKILL.md
skills/scm/references/: commit-workflow.md
skills/skill-creator/: SKILL.md
skills/spec-driven-dev/references/: templates.md  workflow.md
skills/terraform/: SKILL.md
skills/web-automation/: SKILL.md
skills/web-automation/examples/js/: console_logging.js  element_discovery.js  screenshot_capture.js
skills/web-automation/references/: javascript-patterns.md  python-patterns.md  test-framework.md
skills/web-automation/scripts/: cdp_session.py  combined_debugger.py  console_debugger.py  cookie_consent.py  network_inspector.py  server_utils.py  test_utils.py
(+5 files in other folders)
